优化CompressUtil中函数的命名

--- a/Propro-Client/Forms/AirdForm.resx
+++ b/Propro-Client/Forms/AirdForm.resx
@@ -450,35 +450,161 @@
   <data name="&gt;&gt;container.Panel1.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
-  <data name="cbLosslessMz.AutoSize" type="System.Boolean, mscorlib">
+  <data name="lblOperator.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Left, Right</value>
+  </data>
+  <data name="lblOperator.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="cbLosslessMz.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+  <data name="lblOperator.Font" type="System.Drawing.Font, System.Drawing">
+    <value>微软雅黑, 8pt</value>
+  </data>
+  <data name="lblOperator.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
-  <data name="cbLosslessMz.Location" type="System.Drawing.Point, System.Drawing">
-    <value>198, 90</value>
+  <data name="lblOperator.Location" type="System.Drawing.Point, System.Drawing">
+    <value>5, 175</value>
   </data>
-  <data name="cbLosslessMz.Size" type="System.Drawing.Size, System.Drawing">
-    <value>244, 21</value>
+  <data name="lblOperator.Size" type="System.Drawing.Size, System.Drawing">
+    <value>92, 16</value>
   </data>
-  <data name="cbLosslessMz.TabIndex" type="System.Int32, mscorlib">
-    <value>17</value>
+  <data name="lblOperator.TabIndex" type="System.Int32, mscorlib">
+    <value>21</value>
   </data>
-  <data name="cbLosslessMz.Text" xml:space="preserve">
-    <value>4 decimal places for m/z(Default is 3)</value>
+  <data name="lblOperator.Text" xml:space="preserve">
+    <value>Operator Name:</value>
   </data>
-  <data name="&gt;&gt;cbLosslessMz.Name" xml:space="preserve">
-    <value>cbLosslessMz</value>
+  <data name="&gt;&gt;lblOperator.Name" xml:space="preserve">
+    <value>lblOperator</value>
   </data>
-  <data name="&gt;&gt;cbLosslessMz.Type" xml:space="preserve">
-    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;lblOperator.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;cbLosslessMz.Parent" xml:space="preserve">
+  <data name="&gt;&gt;lblOperator.Parent" xml:space="preserve">
     <value>container.Panel2</value>
   </data>
-  <data name="&gt;&gt;cbLosslessMz.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;lblOperator.ZOrder" xml:space="preserve">
     <value>0</value>
+  </data>
+  <data name="tbOperator.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Left, Right</value>
+  </data>
+  <data name="tbOperator.Font" type="System.Drawing.Font, System.Drawing">
+    <value>微软雅黑, 9pt</value>
+  </data>
+  <data name="tbOperator.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 194</value>
+  </data>
+  <data name="tbOperator.Size" type="System.Drawing.Size, System.Drawing">
+    <value>167, 23</value>
+  </data>
+  <data name="tbOperator.TabIndex" type="System.Int32, mscorlib">
+    <value>20</value>
+  </data>
+  <data name="&gt;&gt;tbOperator.Name" xml:space="preserve">
+    <value>tbOperator</value>
+  </data>
+  <data name="&gt;&gt;tbOperator.Type" xml:space="preserve">
+    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;tbOperator.Parent" xml:space="preserve">
+    <value>container.Panel2</value>
+  </data>
+  <data name="&gt;&gt;tbOperator.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="btnCheckGPU.Font" type="System.Drawing.Font, System.Drawing">
+    <value>微软雅黑, 8pt</value>
+  </data>
+  <data name="btnCheckGPU.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="btnCheckGPU.Location" type="System.Drawing.Point, System.Drawing">
+    <value>3, 223</value>
+  </data>
+  <data name="btnCheckGPU.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 25</value>
+  </data>
+  <data name="btnCheckGPU.TabIndex" type="System.Int32, mscorlib">
+    <value>13</value>
+  </data>
+  <data name="btnCheckGPU.Text" xml:space="preserve">
+    <value>Check GPU</value>
+  </data>
+  <data name="&gt;&gt;btnCheckGPU.Name" xml:space="preserve">
+    <value>btnCheckGPU</value>
+  </data>
+  <data name="&gt;&gt;btnCheckGPU.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;btnCheckGPU.Parent" xml:space="preserve">
+    <value>container.Panel2</value>
+  </data>
+  <data name="&gt;&gt;btnCheckGPU.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="lblMzPrecision.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <data name="lblMzPrecision.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="lblMzPrecision.Location" type="System.Drawing.Point, System.Drawing">
+    <value>353, 92</value>
+  </data>
+  <data name="lblMzPrecision.Size" type="System.Drawing.Size, System.Drawing">
+    <value>83, 17</value>
+  </data>
+  <data name="lblMzPrecision.TabIndex" type="System.Int32, mscorlib">
+    <value>19</value>
+  </data>
+  <data name="lblMzPrecision.Text" xml:space="preserve">
+    <value>MZ Precision</value>
+  </data>
+  <data name="&gt;&gt;lblMzPrecision.Name" xml:space="preserve">
+    <value>lblMzPrecision</value>
+  </data>
+  <data name="&gt;&gt;lblMzPrecision.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;lblMzPrecision.Parent" xml:space="preserve">
+    <value>container.Panel2</value>
+  </data>
+  <data name="&gt;&gt;lblMzPrecision.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
+  <data name="cbMzPrecision.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
+  </data>
+  <data name="cbMzPrecision.Items" xml:space="preserve">
+    <value>0.001</value>
+  </data>
+  <data name="cbMzPrecision.Items1" xml:space="preserve">
+    <value>0.0001</value>
+  </data>
+  <data name="cbMzPrecision.Items2" xml:space="preserve">
+    <value>0.00001</value>
+  </data>
+  <data name="cbMzPrecision.Location" type="System.Drawing.Point, System.Drawing">
+    <value>442, 88</value>
+  </data>
+  <data name="cbMzPrecision.Size" type="System.Drawing.Size, System.Drawing">
+    <value>84, 25</value>
+  </data>
+  <data name="cbMzPrecision.TabIndex" type="System.Int32, mscorlib">
+    <value>18</value>
+  </data>
+  <data name="&gt;&gt;cbMzPrecision.Name" xml:space="preserve">
+    <value>cbMzPrecision</value>
+  </data>
+  <data name="&gt;&gt;cbMzPrecision.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cbMzPrecision.Parent" xml:space="preserve">
+    <value>container.Panel2</value>
+  </data>
+  <data name="&gt;&gt;cbMzPrecision.ZOrder" xml:space="preserve">
+    <value>4</value>
   </data>
   <data name="cbThreadAccelerate.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -508,7 +634,10 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;cbThreadAccelerate.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>5</value>
+  </data>
+  <data name="cbLog2.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
+    <value>Top, Right</value>
   </data>
   <data name="cbLog2.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -517,16 +646,16 @@
     <value>NoControl</value>
   </data>
   <data name="cbLog2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>176, 63</value>
+    <value>271, 63</value>
   </data>
   <data name="cbLog2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>274, 21</value>
+    <value>260, 21</value>
   </data>
   <data name="cbLog2.TabIndex" type="System.Int32, mscorlib">
     <value>15</value>
   </data>
   <data name="cbLog2.Text" xml:space="preserve">
-    <value>Log2(Intensity) -- Precision loss:0%- 0.25%</value>
+    <value>Log2(Intensity) -- Precision loss: &lt;0.25%</value>
   </data>
   <data name="&gt;&gt;cbLog2.Name" xml:space="preserve">
     <value>cbLog2</value>
@@ -538,7 +667,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;cbLog2.ZOrder" xml:space="preserve">
-    <value>2</value>
+    <value>6</value>
   </data>
   <data name="lblFileNameTag.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -574,7 +703,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;lblFileNameTag.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>7</value>
   </data>
   <data name="tbFileNameSuffix.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -601,7 +730,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;tbFileNameSuffix.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>8</value>
   </data>
   <data name="cbIsZeroIntensityIgnore.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -628,7 +757,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;cbIsZeroIntensityIgnore.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>9</value>
   </data>
   <data name="lblConsole.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left</value>
@@ -661,7 +790,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;lblConsole.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>10</value>
   </data>
   <data name="tbConsole.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Bottom, Left, Right</value>
@@ -694,7 +823,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;tbConsole.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>11</value>
   </data>
   <data name="label1.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -727,7 +856,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;label1.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>12</value>
   </data>
   <data name="btnChooseFolder.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Right</value>
@@ -760,7 +889,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;btnChooseFolder.ZOrder" xml:space="preserve">
-    <value>9</value>
+    <value>13</value>
   </data>
   <data name="tbFolderPath.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
     <value>Top, Left, Right</value>
@@ -787,7 +916,7 @@
     <value>container.Panel2</value>
   </data>
   <data name="&gt;&gt;tbFolderPath.ZOrder" xml:space="preserve">
-    <value>10</value>
+    <value>14</value>
   </data>
   <data name="container.Panel2.Font" type="System.Drawing.Font, System.Drawing">
     <value>微软雅黑, 9pt</value>
