修复界面刷新时的闪屏问题 优化ParseDouble时的重试机制

--- a/Propro-Client/Forms/AirdForm.resx
+++ b/Propro-Client/Forms/AirdForm.resx
@@ -2093,7 +2093,7 @@
 </value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Aird-Manager</value>
+    <value>AirdPro</value>
   </data>
   <data name="&gt;&gt;headerFilePath.Name" xml:space="preserve">
     <value>headerFilePath</value>
